buffer_based_granular and style

--- a/src/clients/styles/app.scss
+++ b/src/clients/styles/app.scss
@@ -17,6 +17,11 @@ html, body {
   color: var(--sw-font-color);
 }
 
+sc-tab {
+  width: 480px;
+  font-size: 10px;
+}
+
 html {
   font-size: var(--sw-font-size);
 }
